# machine-learning-Demo

./: README.md
MLP/: CMakeLists.txt  mlp.cpp  mlp.model  mlp.py  mlp.xml  wine.csv
boost_tree/: CMakeLists.txt  adaboost.model  bagging.model  boost.xml  boost_tree.cpp  boost_tree.py  gbdt.model
catboost/: cat.py  catboost.model
decision_tree/: CMakeLists.txt  air.csv  decision_tree.cpp  decision_tree.py  dtree_result.xml  tree.dot  tree.model
gcForest/examples/: demo_mnist.py  wine.py
lightgbm/: gbm.py  gbm.txt
ml-throwdown-datasets/: concrete.csv  pendigits.csv  wine.csv
pca/: pca_Dimension_reduction.py  pca_rotate.py
random_forest/: CMakeLists.txt  RandomForest.cpp  RandomForest.py  forest.model  rtree.xml
svm/: CMakeLists.txt  svm.cpp  svm.model  svm.py  svm.xml
xgboost/: xg.model  xgDemo.py
